kubemanifests/stateless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stateless-app
  labels:
    app: stateless-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateless-app
  template:
    metadata:
      labels:
        app: stateless-app
    spec:
      containers:
        - name: stateless-app-container
          image: bhaumikshukla/go-stateless
          ports:
            - containerPort: 8000
